Resolves #26 add "jump to top" button

--- a/src/Mayflower/JiraIssueVoteBundle/Resources/public/css/site.css
+++ b/src/Mayflower/JiraIssueVoteBundle/Resources/public/css/site.css
@@ -106,6 +106,15 @@ label small {
     width: 83.333333333%
 }
 
+.btn-jumper {
+    right: 0;
+    bottom: 50%;
+    position: fixed;
+    border-bottom-right-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+    margin: 0;
+}
+
 /* movile customizations */
 @media screen and (max-width:974px){
     .vote-box {
